--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,13 @@ wheels/
 .installed.cfg
 *.egg
 
+#Customed
+**/.ipynb_checkpoints/*
+**/logs/*
+leo/data/*
+leo/model/*.h5
+leo/models/*.h5
+leo/feature/*
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
