update phase1 and 2 code

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ wheels/
 **/.ipynb_checkpoints/*
 **/logs/*
 leo/data/*
-leo/model/*.h5
+leo/model/*
 leo/models/*.h5
 leo/feature/*
 # PyInstaller
