update README for strong baseline

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ leo/data/*
 leo/model/*
 leo/models/*.h5
 leo/feature/*
+leo/result/*
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
