--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ mike/predict_test_csv
 mike/predict_train_csv
 mike/resnet_varified
 mike/predict_valid_csv
+mike/predict_unverified_csv
 =======
 
 # ignore useless cache
