--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,12 @@ mike/predict_unverified_csv
 mike/model_cnn2d/
 mike/model_cnn2d_verified
 mike/resnet_varified_refine
+mike/cnn2d_verified_refine
+mike/cnn2d_verified
+mike/cnn2d_semi_test_csv
+mike/restnet_semi_test_csv
+mike/test_semi_model
+mike/model_full_cnn2d
 =======
 
 # ignore useless cache
